--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <div class="box">
           <div class="inBox">
-            <img src="foto/1.jpg" alt="1"  style="transform:rotate(-90deg)">
+            <img src="foto/gambar.jpg" alt="1"  style="transform:rotate(-90deg)">
             <h2>Adi Iman Utama</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
               sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -39,7 +39,7 @@
             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
           </p>
         </div>
-        
+
       </div>
 
 
