--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <div class="box">
           <div class="inBox">
-            <img src="foto/1.jpg" alt="1"  style="transform:rotate(-90deg)">
+            <img src="foto/1adi.jpg" alt="1"  style="transform:rotate(-90deg)">
             <h2>Adi Iman Utama</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
               sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -25,7 +25,7 @@
         </div>
 
         <div class="box">
-          <img src="2alex.jpg" alt="1"  style="transform:rotate(-90deg)">
+          <img src="foto/2alex.jpg" alt="1"  style="transform:rotate(-90deg)">
           <h2>Alex Siwy</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -33,7 +33,7 @@
         </div>
 
         <div class="box">
-          <img src="4mira.jpg" alt="1" width="400" height="300" style="transform:rotate(-90deg)">
+          <img src="foto/4mira.jpg" alt="1" width="400" height="300" style="transform:rotate(-90deg)">
           <h2>Mira Monica</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
